graph TD
erDiagram
USER {
int user_id PK
string username
string email
}
PHONE {
int phone_id PK
string model
string imei
}
PHONE_SWAP_REQUEST {
int swap_id PK
int requester_id FK
int requested_phone_id FK
int offered_phone_id FK
string status
string reason
}
USER ||--o{ PHONE : owns
PHONE_SWAP_REQUEST }o--|| USER : "requests"
PHONE_SWAP_REQUEST }o--|| PHONE : "requests phone"
PHONE_SWAP_REQUEST }o--|| PHONE : "offers phone"